--- a/WorldCinemafinaly (mobile)/app/src/main/AndroidManifest.xml
+++ b/WorldCinemafinaly (mobile)/app/src/main/AndroidManifest.xml
@@ -2,20 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.worldcinemafinaly">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WorldCinemaFinaly">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.WorldCinemaFinaly"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SignIn"></activity>
+        <activity android:name=".SignUp" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
